<resources>
    <string name="K_Error19">"Can't show undefined result."</string>
    <string name="K_Error21">"Can't divide by zero."</string>
    <string name="K_Error4">Calculation outside of accepted range.</string>
    <string name="K_error">Invalid format used.</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Calculator</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="area_item_acre">Acres</string>
    <string name="area_item_are">Ares</string>
    <string name="area_item_hectare">Hectares</string>
    <string name="area_item_ko_pyong">평</string>
    <string name="area_item_square_cm">Square centimeters</string>
    <string name="area_item_square_ft">Square feet</string>
    <string name="area_item_square_in">Square inches</string>
    <string name="area_item_square_m">Square meters</string>
    <string name="area_item_zh_mu">Mu</string>
    <string name="area_item_zh_qing">Qing</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="button">Button</string>
    <string name="calculation_result">Calculation result</string>
    <string name="calculator_input_field">Calculator input field</string>
    <string name="cannot_change_mode">Cannot change mode when popup view is square.</string>
    <string name="category_area">Area</string>
    <string name="category_data">Data size</string>
    <string name="category_length">Length</string>
    <string name="category_mass">Mass</string>
    <string name="category_speed">Speed</string>
    <string name="category_temperature">Temperature</string>
    <string name="category_time">Time</string>
    <string name="category_tip">Tip</string>
    <string name="category_volume">Volume</string>
    <string name="character_counter_content_description">%1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clear_history">Clear history</string>
    <string name="commercial">Commercial</string>
    <string name="data_item_bit">Bits</string>
    <string name="data_item_byte">Bytes</string>
    <string name="data_item_gb">Gigabytes</string>
    <string name="data_item_gib">Gibibytes</string>
    <string name="data_item_kb">Kilobytes</string>
    <string name="data_item_kib">Kibibytes</string>
    <string name="data_item_mb">Megabytes</string>
    <string name="data_item_mib">Mebibytes</string>
    <string name="data_item_tb">Terabytes</string>
    <string name="data_item_tib">Tebibytes</string>
    <string name="decreasing">Decreasing</string>
    <string name="decreasing_installments">Decreasing installments</string>
    <string name="description_0">0</string>
    <string name="description_1">1</string>
    <string name="description_1divx">Inverse number</string>
    <string name="description_2">2</string>
    <string name="description_2x">2 to the power of</string>
    <string name="description_3">3</string>
    <string name="description_4">4</string>
    <string name="description_5">5</string>
    <string name="description_6">6</string>
    <string name="description_7">7</string>
    <string name="description_8">8</string>
    <string name="description_9">9</string>
    <string name="description_abs">Absolute value</string>
    <string name="description_acos">inverse cosine</string>
    <string name="description_acosh">inverse hyperbolic cosine</string>
    <string name="description_add">plus</string>
    <string name="description_alternative_functions">Alternative functions</string>
    <string name="description_asin">inverse sine</string>
    <string name="description_asinh">inverse hyperbolic sine</string>
    <string name="description_atan">inverse tangent</string>
    <string name="description_atanh">inverse hyperbolic tangent</string>
    <string name="description_backspace">backspace</string>
    <string name="description_cbroot">cube root</string>
    <string name="description_clear">clear</string>
    <string name="description_cos">cosine</string>
    <string name="description_cosh">hyperbolic cosine</string>
    <string name="description_degree">Degree</string>
    <string name="description_devided_by">divided by</string>
    <string name="description_div">divide</string>
    <string name="description_dot">dot</string>
    <string name="description_equal">equal</string>
    <string name="description_euler_number">"Euler's number"</string>
    <string name="description_ey">e to the power of x</string>
    <string name="description_fact">factorial</string>
    <string name="description_ln">Natural log</string>
    <string name="description_log">logarithm</string>
    <string name="description_mul">multiply</string>
    <string name="description_parenthesis">Brackets</string>
    <string name="description_percentage">percentage</string>
    <string name="description_pie">Pi</string>
    <string name="description_plusminus">Switch between plus and minus</string>
    <string name="description_power_of">to the power of</string>
    <string name="description_radian">Radian</string>
    <string name="description_root">Square root</string>
    <string name="description_sin">sine</string>
    <string name="description_sinh">hyperbolic sine</string>
    <string name="description_sub">minus</string>
    <string name="description_tablayout_item">Tab %1$d of %2$d</string>
    <string name="description_tan">tangent</string>
    <string name="description_tanh">hyperbolic tangent</string>
    <string name="description_times">times</string>
    <string name="description_x2">x squared</string>
    <string name="description_x3">Cube</string>
    <string name="description_xy">x to the power of y</string>
    <string name="dis_item_ko_ja">자</string>
    <string name="dis_item_ko_li">리</string>
    <string name="drop_down_list">Drop down list</string>
    <string name="edit">edit</string>
    <string name="edit_box">Edit box</string>
    <string name="enter_calculation">enter calculation</string>
    <string name="equal">Equal</string>
    <string name="equal_installments">Equal installments</string>
    <string name="exchange_dialog_button_agree">Agree</string>
    <string name="exchange_dialog_button_cancel">CANCEL</string>
    <string name="exchange_dialog_button_ok">OK</string>
    <string name="exchange_dialog_message">Allow %s to use network connections so you can access all its features?</string>
    <string name="exchange_dialog_message_disclaimer">Samsung disclaims any warranty or representation to any third-party services or content in any aspects, including accuracy, effectiveness, non-infringement, and compliance with any applicable laws or regulations.</string>
    <string name="exchange_dialog_message_no_network">Check your network connection, then try loading the latest %s information again.</string>
    <string name="exchange_dialog_title_disclaimer">Disclaimer</string>
    <string name="exchange_dialog_title_no_network">No network connection</string>
    <string name="exchange_rate_aed">United Arab Emirates Dirham</string>
    <string name="exchange_rate_ars">Argentine Peso</string>
    <string name="exchange_rate_aud">Australian Dollar</string>
    <string name="exchange_rate_bgn">Bulgarian Lev</string>
    <string name="exchange_rate_bhd">Bahraini Dinar</string>
    <string name="exchange_rate_bnd">Brunei Dollar</string>
    <string name="exchange_rate_brl">Brazilian Real</string>
    <string name="exchange_rate_cad">Canadian Dollar</string>
    <string name="exchange_rate_chf">Swiss Franc</string>
    <string name="exchange_rate_clp">Chilean Peso</string>
    <string name="exchange_rate_cny">Chinese yuan</string>
    <string name="exchange_rate_cop">Colombian Peso</string>
    <string name="exchange_rate_crc">Costa Rican Colon</string>
    <string name="exchange_rate_czk">Czechish Koruna</string>
    <string name="exchange_rate_dkk">Danish Krona</string>
    <string name="mtg_details_interest">Interest</string>
    <string name="mtg_details_month">Month</string>
    <string name="mtg_details_principal">Principal</string>
    <string name="mtg_details_remaining">Remaining</string>
    <string name="mtg_details_repayment">Repayment</string>
    <string name="navigate_up">Navigate up</string>
    <string name="roboto_light">sans-serif-light</string>
    <string name="roboto_regular">sec-roboto-light</string>
    <string name="sec_semiBold">sec-600</string>
    <string name="tip_item_cancel">Cancel</string>
    <string name="tip_item_done">Done</string>
    <string name="unicode_0">0</string>
    <string name="unicode_1">1</string>
    <string name="unicode_2">2</string>
    <string name="unicode_3">3</string>
    <string name="unicode_4">4</string>
    <string name="unicode_5">5</string>
    <string name="unicode_6">6</string>
    <string name="unicode_7">7</string>
    <string name="unicode_8">8</string>
    <string name="unicode_9">9</string>
    <string name="unicode_dot">.</string>
    <string name="unicode_percentage">%</string>
    <string name="unicode_plusminus_2">+/−</string>
</resources>