<?xml version="1.0" encoding="utf-8"?>
<com.sec.android.app.popupcalculator.calc.view.KeyboardLayout android:id="@id/calc_keypad" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_clear" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_bot_phone" android:contentDescription="@string/description_clear" android:nextFocusForward="@id/calc_keypad_btn_parenthesis" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_end_phone" android:layout_alignParentStart="true" style="@style/calc_keypad_btn_clear_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_parenthesis" android:nextFocusUp="@id/calc_handle_btn_converter" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_bot_phone" android:contentDescription="@string/description_parenthesis" android:nextFocusForward="@id/calc_keypad_btn_percentage" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_clear" style="@style/calc_keypad_btn_parenthesis_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_percentage" android:nextFocusUp="@id/calc_handle_btn_rotation" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_bot_phone" android:contentDescription="@string/description_percentage" android:nextFocusForward="@id/calc_keypad_btn_div" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_parenthesis" style="@style/calc_keypad_btn_percentage_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_div" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_bot_phone" android:contentDescription="@string/description_div" android:nextFocusForward="@id/calc_keypad_btn_07" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_percentage" android:accessibilityTraversalBefore="@id/calc_keypad_btn_07" style="@style/calc_keypad_btn_div_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_07" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_7" android:layout_below="@id/calc_keypad_btn_clear" android:contentDescription="@string/description_7" android:nextFocusForward="@id/calc_keypad_btn_08" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_end_phone" android:layout_alignParentStart="true" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_08" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:src="@drawable/calculator_btn_number_background" android:text="@string/unicode_8" android:layout_below="@id/calc_keypad_btn_clear" android:contentDescription="@string/description_8" android:nextFocusForward="@id/calc_keypad_btn_09" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_07" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_09" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_9" android:layout_below="@id/calc_keypad_btn_clear" android:contentDescription="@string/description_9" android:nextFocusForward="@id/calc_keypad_btn_mul" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_08" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_mul" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:layout_below="@id/calc_keypad_btn_clear" android:contentDescription="@string/description_mul" android:nextFocusForward="@id/calc_keypad_btn_04" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_09" android:accessibilityTraversalBefore="@id/calc_keypad_btn_04" style="@style/calc_keypad_btn_mul_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_04" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_4" android:layout_below="@id/calc_keypad_btn_07" android:contentDescription="@string/description_4" android:nextFocusForward="@id/calc_keypad_btn_05" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_end_phone" android:layout_alignParentStart="true" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_05" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_5" android:layout_below="@id/calc_keypad_btn_07" android:contentDescription="@string/description_5" android:nextFocusForward="@id/calc_keypad_btn_06" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_04" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_06" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_6" android:layout_below="@id/calc_keypad_btn_07" android:contentDescription="@string/description_6" android:nextFocusForward="@id/calc_keypad_btn_sub" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_05" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_sub" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:layout_below="@id/calc_keypad_btn_07" android:contentDescription="@string/description_sub" android:nextFocusForward="@id/calc_keypad_btn_01" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_06" android:accessibilityTraversalBefore="@id/calc_keypad_btn_01" style="@style/calc_keypad_btn_sub_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_01" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_1" android:layout_below="@id/calc_keypad_btn_04" android:contentDescription="@string/description_1" android:nextFocusForward="@id/calc_keypad_btn_02" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_end_phone" android:layout_alignParentStart="true" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_02" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_2" android:layout_below="@id/calc_keypad_btn_04" android:contentDescription="@string/description_2" android:nextFocusForward="@id/calc_keypad_btn_03" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_01" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_03" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_3" android:layout_below="@id/calc_keypad_btn_04" android:contentDescription="@string/description_3" android:nextFocusForward="@id/calc_keypad_btn_add" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_02" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_add" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:layout_below="@id/calc_keypad_btn_04" android:contentDescription="@string/description_add" android:nextFocusForward="@id/calc_keypad_btn_plusminus" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_03" android:accessibilityTraversalBefore="@id/calc_keypad_btn_plusminus" style="@style/calc_keypad_btn_add_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:textSize="@dimen/calc_keypad_btn_plus_minus_text_size_phone" android:id="@id/calc_keypad_btn_plusminus" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_plusminus_2" android:layout_below="@id/calc_keypad_btn_01" android:contentDescription="@string/description_plusminus" android:nextFocusForward="@id/calc_keypad_btn_00" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_end_phone" android:layout_alignParentStart="true" app:customTextType="type_plusminus" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_00" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_0" android:layout_below="@id/calc_keypad_btn_01" android:contentDescription="@string/description_0" android:nextFocusForward="@id/calc_keypad_btn_dot" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_plusminus" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:textSize="@dimen/calc_keypad_btn_dot_text_size_phone" android:id="@id/calc_keypad_btn_dot" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:text="@string/unicode_dot" android:layout_below="@id/calc_keypad_btn_01" android:contentDescription="@string/description_dot" android:nextFocusForward="@id/calc_keypad_btn_equal" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_00" app:customTextType="type_dot" style="@style/calc_keypad_btn_number_style" />
    <com.sec.android.app.popupcalculator.calc.view.CustomButton android:id="@id/calc_keypad_btn_equal" android:layout_width="@dimen/calc_keypad_btn_width_phone" android:layout_height="@dimen/calc_keypad_btn_height_phone" android:layout_marginTop="@dimen/calc_keypad_btn_margin_top_middle_phone" android:layout_below="@id/calc_keypad_btn_01" android:contentDescription="@string/description_equal" android:nextFocusForward="@id/calc_edt_formula" android:layout_marginStart="@dimen/calc_keypad_btn_margin_start_middle_phone" android:layout_toEndOf="@id/calc_keypad_btn_dot" style="@style/calc_keypad_btn_equal_style" />
    <ViewStub android:id="@id/calc_viewstub_history" android:background="@android:color/white" android:visibility="gone" android:layout="@layout/history_layout_phone" android:layout_width="@dimen/calc_history_width_phone" android:layout_height="fill_parent" android:layout_alignParentStart="true" />
</com.sec.android.app.popupcalculator.calc.view.KeyboardLayout>