<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="horizontal" android:id="@id/action_bar_layout" android:background="@color/action_bar_title_bg" android:layout_width="fill_parent" android:layout_height="@dimen/converter_toolbar_height" android:layout_marginBottom="@dimen/converter_toolbar_margin_bottom_phone">
        <ImageView android:theme="@style/CalculatorDeviceDefaultStyle" android:id="@id/converter_btn_back" android:background="@drawable/ripple_effect_actionbar" android:layout_width="@dimen/converter_btn_back_width" android:layout_height="@dimen/converter_btn_back_height" android:src="@drawable/calculator_btn_back" android:contentDescription="@string/navigate_up" android:paddingStart="@dimen/converter_btn_back_padding_start" android:paddingEnd="@dimen/converter_btn_back_padding_end" android:paddingVertical="@dimen/converter_btn_back_padding_vertical" />
        <TextView android:textSize="@dimen/converter_title_actionbar_text_size" android:textStyle="bold" android:textColor="@color/title_actionbar" android:gravity="center_vertical" android:id="@id/actionbar_title" android:layout_width="wrap_content" android:layout_height="fill_parent" android:fontFamily="@string/roboto_regular" />
    </LinearLayout>
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="40.0dip">
        <TextView android:textSize="@dimen/mtg_result_detail_subtitle_size" android:textStyle="bold" android:textColor="@color/converter_area_text" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mtg_details_month" android:layout_weight="1.0" android:fontFamily="@string/roboto_light" android:paddingStart="?android:listPreferredItemPaddingStart" />
        <TextView android:textSize="@dimen/mtg_result_detail_subtitle_size" android:textStyle="bold" android:textColor="@color/converter_area_text" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mtg_details_repayment" android:layout_weight="1.0" android:fontFamily="@string/roboto_light" />
        <TextView android:textSize="@dimen/mtg_result_detail_subtitle_size" android:textStyle="bold" android:textColor="@color/converter_area_text" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mtg_details_principal" android:layout_weight="1.0" android:fontFamily="@string/roboto_light" />
        <TextView android:textSize="@dimen/mtg_result_detail_subtitle_size" android:textStyle="bold" android:textColor="@color/converter_area_text" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mtg_details_interest" android:layout_weight="1.0" android:fontFamily="@string/roboto_light" />
        <TextView android:textSize="@dimen/mtg_result_detail_subtitle_size" android:textStyle="bold" android:textColor="@color/converter_area_text" android:gravity="start" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/mtg_details_remaining" android:layout_weight="1.0" android:fontFamily="@string/roboto_light" />
    </LinearLayout>
    <View android:background="@color/converter_edit_divider" android:layout_width="fill_parent" android:layout_height="@dimen/calc_keypad_divider" />
    <ListView android:id="@id/listView" android:layout_width="fill_parent" android:layout_height="fill_parent" />
</LinearLayout>