<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/tip_main_layout" android:background="@drawable/tip_number_picker_dialog_bg" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginHorizontal="@dimen/converter_page_item_tip_unit_dialog_margin_horizontal" android:layout_marginVertical="@dimen/converter_page_item_tip_unit_dialog_margin_vertical"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/converter_page_item_dialog_title_text_size" android:textStyle="bold" android:textColor="@color/converter_tip_number_picker_dialog_title_text" android:gravity="center|left" android:id="@id/tip_dialog_title" android:layout_width="fill_parent" android:layout_height="27.0dip" android:layout_marginTop="24.0dip" android:layout_marginBottom="18.0dip" android:text="@string/category_tip" android:fontFamily="@string/sec_semiBold" android:layout_marginHorizontal="24.0dip" />
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="0.0dip" android:weightSum="100.0" android:layout_weight="8.0">
        <com.sec.android.app.popupcalculator.converter.controller.CustomNumberPicker android:theme="@style/converter_number_picker" android:id="@id/tip_number_picker" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="60.0" />
        <TextView android:textSize="@dimen/converter_page_item_dialog_percent_text_size" android:textStyle="bold" android:textColor="@color/converter_tip_number_picker_text" android:gravity="center" android:id="@id/tip_number_tv" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/unicode_percentage" android:singleLine="true" android:layout_weight="28.0" android:fontFamily="@string/sec_semiBold" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginHorizontal="24.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/parent_of_btn_cancel" android:background="@drawable/mortgage_tab_bg" android:layout_width="0.0dip" android:layout_height="@dimen/converter_page_item_btn_done_layout_height" android:layout_marginTop="@dimen/converter_page_item_btn_done_layout_margin_top" android:layout_marginBottom="@dimen/converter_page_item_btn_done_layout_margin_bottom" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/converter_page_item_btn_done_text_size_phone" android:textStyle="bold" android:textColor="@color/converter_tip_btn_done" android:ellipsize="end" android:gravity="center" android:id="@id/btn_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_item_cancel" android:singleLine="true" android:fontFamily="@string/sec_semiBold" />
        </LinearLayout>
        <View android:layout_gravity="center" android:background="@color/converter_tip_dialog_button_divider" android:layout_width="1.0dip" android:layout_height="16.0dip" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/parent_of_btn_done" android:background="@drawable/mortgage_tab_bg" android:layout_width="0.0dip" android:layout_height="@dimen/converter_page_item_btn_done_layout_height" android:layout_marginTop="@dimen/converter_page_item_btn_done_layout_margin_top" android:layout_marginBottom="@dimen/converter_page_item_btn_done_layout_margin_bottom" android:layout_weight="1.0">
            <TextView android:textSize="@dimen/converter_page_item_btn_done_text_size_phone" android:textStyle="bold" android:textColor="@color/converter_tip_btn_done" android:ellipsize="end" android:id="@id/btn_done" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/tip_item_done" android:singleLine="true" android:fontFamily="@string/sec_semiBold" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>